--- a/profil_pertama/index.html
+++ b/profil_pertama/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="/src/assets/wave.css">
+    <link rel="stylesheet" href="/src/assets/globals.css">
+    <!-- <link rel="stylesheet" href="/src/assets/index.css"> -->
+
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mohan Henry</title>
